--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,77 @@
 {
     "cSpell.words": [
+        "cada",
         "calcular",
+        "Calcule",
+        "cartesiano",
+        "Caso",
+        "compõem",
+        "contrário",
+        "coodenada",
+        "coordenadas",
+        "corresponder",
         "cujo",
+        "deseja",
+        "desta",
         "deve",
+        "devem",
+        "Dica",
+        "Digite",
+        "Distância",
         "divisão",
+        "divisível",
+        "dois",
         "duas",
+        "entrada",
         "equação",
         "equações",
         "Esta",
+        "Exercício",
+        "Exercícios",
         "existe",
+        "faça",
+        "fórmula",
         "grau",
         "igual",
+        "ímpar",
+        "imprima",
+        "inteiro",
+        "lembre",
         "maior",
         "menor",
+        "mesmo",
         "negativos",
+        "número",
         "números",
         "outro",
+        "parcial",
+        "pegue",
+        "perto",
+        "ponto",
+        "pontos",
+        "possui",
+        "primeira",
         "primeiro",
+        "primeiros",
+        "programa",
+        "progrma",
+        "qualquer",
+        "Quantos",
         "raiz",
         "raizes",
         "raízes",
         "reais",
-        "Tente"
+        "Receba",
+        "respectivamente",
+        "resultado",
+        "saída",
+        "seguinte",
+        "segunda",
+        "somar",
+        "tamanho",
+        "Tente",
+        "últimos",
+        "valores",
+        "você"
     ]
 }
