--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "cSpell.words": [
+        "adjacente",
+        "adjacentes",
         "cada",
         "calcular",
         "Calcule",
@@ -16,6 +18,8 @@
         "deve",
         "devem",
         "Dica",
+        "diga",
+        "digitado",
         "Digite",
         "Distância",
         "divisão",
@@ -30,8 +34,10 @@
         "Exercícios",
         "existe",
         "faça",
+        "Fazer",
         "fórmula",
         "grau",
+        "iguais",
         "igual",
         "ímpar",
         "imprima",
@@ -63,12 +69,14 @@
         "reais",
         "Receba",
         "respectivamente",
+        "resto",
         "resultado",
         "saída",
         "seguinte",
         "segunda",
         "somar",
         "tamanho",
+        "Temos",
         "Tente",
         "últimos",
         "valores",
