--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "abaixo",
         "adjacente",
         "adjacentes",
         "cada",
@@ -30,22 +31,27 @@
         "equação",
         "equações",
         "Esta",
+        "exemplo",
         "Exercício",
         "Exercícios",
         "existe",
         "faça",
+        "fatorial",
         "Fazer",
+        "formato",
         "fórmula",
         "grau",
         "iguais",
         "igual",
         "ímpar",
+        "ímpares",
         "imprima",
         "inteiro",
         "lembre",
         "maior",
         "menor",
         "mesmo",
+        "naturais",
         "negativos",
         "número",
         "números",
@@ -55,6 +61,7 @@
         "perto",
         "ponto",
         "pontos",
+        "positivo",
         "possui",
         "primeira",
         "primeiro",
@@ -74,6 +81,7 @@
         "saída",
         "seguinte",
         "segunda",
+        "siga",
         "somar",
         "tamanho",
         "Temos",
