entrando na semana 6 do curso

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,15 @@
 {
     "cSpell.words": [
         "abaixo",
+        "adição",
         "adjacente",
         "adjacentes",
+        "aquele",
+        "bonominal",
         "cada",
         "calcular",
         "Calcule",
+        "cálculo",
         "cartesiano",
         "Caso",
         "compõem",
@@ -27,15 +31,19 @@
         "divisível",
         "dois",
         "duas",
+        "elementos",
         "entrada",
         "equação",
         "equações",
+        "Escreva",
         "Esta",
         "exemplo",
         "Exercício",
         "Exercícios",
         "existe",
+        "expressão",
         "faça",
+        "fato",
         "fatorial",
         "Fazer",
         "formato",
@@ -48,6 +56,7 @@
         "imprima",
         "inteiro",
         "lembre",
+        "ligados",
         "maior",
         "menor",
         "mesmo",
@@ -66,6 +75,7 @@
         "primeira",
         "primeiro",
         "primeiros",
+        "produzido",
         "programa",
         "progrma",
         "qualquer",
@@ -81,13 +91,17 @@
         "saída",
         "seguinte",
         "segunda",
+        "sendo",
         "siga",
+        "sinal",
         "somar",
+        "subtração",
         "tamanho",
         "Temos",
         "Tente",
         "últimos",
         "valores",
+        "verifique",
         "você"
     ]
 }
